--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -1005,15 +1005,21 @@ ul.recipients {
 }
 
 .videowrapper {
-	position: relative;
-	height: 0;
-	padding-bottom: 45%;
+    height: 0;
+    padding-bottom: 45%;
+    position: relative;
 }
 
 .videowrapper iframe {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
+@media #{$small-only} {
+    #offCanvas {
+        overflow-y: hidden !important;
+    }
 }
