--- a/src/onegov/landsgemeinde/theme/styles/landsgemeinde.scss
+++ b/src/onegov/landsgemeinde/theme/styles/landsgemeinde.scss
@@ -378,6 +378,10 @@ h1.main-title small {
         @include smooth-edges;
     }
 
+    .title {
+        padding: .5rem 0;
+    }
+
     .timeline {
         margin-right: 1rem;
         width: 2rem;
@@ -410,7 +414,6 @@ h1.main-title small {
 
     .list-title {
         border-top: 1px solid $white-smoke;
-        margin-bottom: .7rem;
         padding-top: .7rem;
         transition: opacity 200ms linear;
 
@@ -420,15 +423,18 @@ h1.main-title small {
         }
     }
 
+    .agenda-item-title {
+        color: $charcoal !important;
+        font-size: 1rem;
+        font-weight: bold;
+        margin-bottom: .7rem;
+    }
+
     .list-link {
         border-top: 0 !important;
         display: flex !important;
         padding-top: 0 !important;
 
-    }
-
-    small {
-        color: $charcoal !important;
     }
 }
 
