Disable button if enrolment is not possible.

--- a/src/onegov/feriennet/theme/styles/feriennet.scss
+++ b/src/onegov/feriennet/theme/styles/feriennet.scss
@@ -783,6 +783,13 @@ ul.tags {
         margin: 0;
         width: 25%;
 
+        &.disabled {
+            background-color: $aluminum;
+            border-color: $aluminum;
+            color: $white;
+            cursor: default !important;
+        }
+
         @media #{$medium-only} {
             width: 30%;
         }
