--- a/src/onegov/pas/theme/styles/pas.scss
+++ b/src/onegov/pas/theme/styles/pas.scss
@@ -1,4 +1,5 @@
 $attendence-icon: '\f017';
+$change-icon: '\f1da';
 $commission-icon: '\f500';
 $legislative-period-icon: '\f073';
 $parliamentarian-icon: '\f508';
@@ -6,15 +7,18 @@ $parliamentary-group-icon: '\f2b5';
 $party-icon: '\f0c0';
 $rate-set-icon: '\f4c0';
 $role-icon: '\f02b';
+$pas-settings-icon: '\f7d9';
 
 .globals {
     .attendences::before { @include icon-bold($attendence-icon); }
+    .changes::before { @include icon-bold($change-icon); }
     .commissions::before { @include icon-bold($commission-icon); }
     .legislative-periods::before { @include icon($legislative-period-icon); }
     .parliamentarians::before { @include icon-bold($parliamentarian-icon); }
     .parliamentary-groups::before { @include icon($parliamentary-group-icon); }
     .parties::before { @include icon-bold($party-icon); }
     .rate-sets::before { @include icon-bold($rate-set-icon); }
+    .pas-settings::before { @include icon-bold($pas-settings-icon); }
 }
 
 .edit-bar {
@@ -43,4 +47,8 @@ $role-icon: '\f02b';
 th[rowspan] {
     background-color: $snow;
     vertical-align: top;
+}
+
+table.changes span {
+    display: block;
 }
