--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -1023,3 +1023,23 @@ ul.recipients {
         overflow-y: hidden !important;
     }
 }
+
+/*
+    Views inside iFrames
+*/
+
+.framed {
+    padding: 1rem 0;
+
+    #inner-body {
+        height: auto;
+        min-height: 1px;
+    }
+
+    #header,
+    .main-title,
+    .breadcrumbs,
+    footer {
+        display: none;
+    }
+}
