--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -1043,3 +1043,18 @@ ul.recipients {
         display: none;
     }
 }
+
+/*
+    Foundation Accordion Extension
+*/
+
+.accordion-item {
+
+    .accordion-title {
+        border-bottom: 1px solid $gray;
+    }
+
+    .accordion-content {
+        border-bottom: 1px solid $gray;
+    }
+}
