--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -649,6 +649,15 @@ $pageref-color-hover: $iron;
                 padding-top: .5rem;
                 transition: border-top 200ms linear;
                 width: 100%;
+
+                &.multi-line {
+                    display: flex;
+
+                    i {
+                        margin-right: .5rem;
+                        margin-top: .3rem;
+                    }
+                }
             }
 
             &:hover {
