Directory: Enable option for getting notifications on new directory entries
If option is enabled in directory settings, people can now subscribe to a directory. Whenever said directory gets a new entry, subscribers get a notification email.

TYPE: Feature
LINK: OGC-1595

--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -425,6 +425,10 @@ input[type="url"] {
     }
 }
 
+.save-link {
+    cursor: pointer;
+}
+
 form .button {
     margin-top: 1rem;
 
@@ -645,6 +649,15 @@ $pageref-color-hover: $iron;
                 padding-top: .5rem;
                 transition: border-top 200ms linear;
                 width: 100%;
+
+                &.multi-line {
+                    display: flex;
+
+                    i {
+                        margin-right: .5rem;
+                        margin-top: .3rem;
+                    }
+                }
             }
 
             &:hover {
