--- a/src/onegov/town6/theme/styles/files.scss
+++ b/src/onegov/town6/theme/styles/files.scss
@@ -59,16 +59,16 @@ section#content .files {
         }
 
         &:nth-child(3) {
-            width: 5%;
+            width: 10%;
         }
 
         &:nth-child(4) {
             width: 15%;
         }
-    }
 
-    th:last-child {
-        text-align: right;
+        &:nth-child(5) {
+            width: 15%;
+        }
     }
 
     th span {
@@ -107,11 +107,15 @@ section#content .files {
             display: inline;
             font-size: 90%;
             margin-left: .2em;
-
         }
 
         td:nth-child(4) {
-            text-align: right;
+            text-align: left;
+            white-space: nowrap;
+        }
+
+        td:nth-child(5) {
+            text-align: left;
             white-space: nowrap;
         }
     }
