--- a/src/onegov/town6/theme/styles/widgets.scss
+++ b/src/onegov/town6/theme/styles/widgets.scss
@@ -107,6 +107,7 @@ article.content .side-panel {
 
     .full.primary {
         @include primary-color-background;
+        background: black !important;
     }
 
     &> .grid-container {
