--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -979,6 +979,7 @@ ul.recipients {
 .icon-left-of-text {
     width: 1.5rem;
 }
+
 .header-image {
     margin-bottom: .5rem;
     position: relative;
@@ -1057,4 +1058,11 @@ ul.recipients {
     .accordion-content {
         border-bottom: 1px solid $gray;
     }
+}
+
+.result-field {
+    font-size: 1.25rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+    display: block;
 }
