--- a/src/onegov/org/theme/styles/org.scss
+++ b/src/onegov/org/theme/styles/org.scss
@@ -345,6 +345,8 @@ $globals-height: 2.5rem;
     .no-tickets::before { @include icon('\f145'); }
     .link-check::before { @include icon('\f0fa'); }
     .ticket-archive::before { @include icon('\f1c6'); }
+    .forms::before { @include icon('\f15c'); }
+    .surveys::before { @include icon('\f080'); }
 
     .with-count::before {
         border: 1px solid $primary-fg-color;
