--- a/src/onegov/org/theme/styles/org.scss
+++ b/src/onegov/org/theme/styles/org.scss
@@ -2450,6 +2450,14 @@ $person-email-icon: '\f003';
         margin-bottom: 1em;
     }
 
+    .person-card-organisation {
+        margin-bottom: 1em;
+
+        span:not(:last-child)::after {
+            content: ' -';
+        }
+    }
+
     .person-card-personal {
         margin-bottom: 1em;
 
