--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -997,6 +997,7 @@ ul.recipients {
 .icon-left-of-text {
     width: 1.5rem;
 }
+
 .header-image {
     margin-bottom: .5rem;
     position: relative;
@@ -1068,5 +1069,29 @@ ul.recipients {
 
     .accordion-content {
         border-bottom: 1px solid $gray;
+    }
+}
+
+.result-field {
+    font-size: 1.25rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+    display: block;
+}
+
+.survey-definition {
+    #formcode-snippet-date-and-time,
+    #formcode-snippet-date,
+    #formcode-snippet-time,
+    #formcode-snippet-files,
+    #formcode-snippet-image,
+    #formcode-snippet-document,
+    #formcode-snippet-extended,
+    #formcode-snippet-iban,
+    #formcode-snippet-swiss-social-security-number,
+    #formcode-snippet-swiss-business-identifier,
+    #formcode-snippet-swiss-vat-number,
+    #formcode-snippet-markdown {
+        display: none;
     }
 }
