--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -1072,12 +1072,38 @@ ul.recipients {
     }
 }
 
+.courses {
+    .page-text table {
+        max-width: 100%;
+    }
+
+    .accordion-title {
+        border-radius: .7rem !important;
+        transition: border-radius 200ms linear;
+        font-size: 1rem;
+
+        &[aria-expanded="true"] {
+            border-radius: .7rem .7rem 0 0  !important;
+        }
+    }
+
+    .accordion-content {
+        border-radius: 0 0 .7rem .7rem;
+    }
+
+    .course-list {
+        max-width: 100%;
+    }
+}
+
+
 .result-field {
     font-size: 1.25rem;
     font-weight: bold;
     margin-bottom: 1rem;
     display: block;
 }
+
 
 .survey-definition {
     #formcode-snippet-date-and-time,
