--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -1094,3 +1094,22 @@ ul.recipients {
         display: none;
     }
 }
+
+
+.chosen-container-multi {
+    .chosen-choices {
+        background: $white !important;
+        border: {
+            radius: 0 !important;
+        }
+        box-shadow: none !important;
+        padding: ($form-spacing / 3) ($form-spacing / 2) !important;
+
+        li.search-choice {
+            background: none !important;
+            border: 0 !important;
+            box-shadow: none !important;
+            float: none;
+        }
+    }
+}
