--- a/src/onegov/translator_directory/theme/styles/translator_directory.scss
+++ b/src/onegov/translator_directory/theme/styles/translator_directory.scss
@@ -16,7 +16,7 @@ $dark-orange:  #be860e;
 
 .edit-bar {
     .create-excel::before { @include icon('\f1c3'); }
-    .documents::before { @include icon('\f016')}
+    .documents::before { @include icon-bold('\f15b')}
     .report-change::before { @include icon('\f2bc')}
 }
 
@@ -37,7 +37,7 @@ $dark-orange:  #be860e;
 }
 
 .new-language {
-    &::before { @include icon($new-language-icon); }
+    &::before { @include icon-bold($new-language-icon); }
 }
 
 #search-results-table {
@@ -69,7 +69,7 @@ $dark-orange:  #be860e;
 
 ul.tags {
     list-style: none;
-    margin: 0 0 .75rem;
+    margin: 0 0 2rem;
     padding: 0;
 
     li {
@@ -96,7 +96,7 @@ ul.tags {
 }
 
 // Icons
-.check-icon::before { @include icon('\f00c'); }
+.check-icon::before { @include icon-bold('\f00c'); }
 
 
 // Form adjustments
@@ -150,7 +150,6 @@ table.translator-documents {
 
 }
 
-// Make font slightly smaller in translator view
 .translator-directory {
     columns: 2;
 
@@ -159,29 +158,17 @@ table.translator-documents {
     }
 
     dl {
-        line-height: 1.3;
         break-inside: avoid;
+        line-height: 1.3;
     }
 
     dd {
-        margin-bottom: 0.6rem;
+        margin-bottom: 1rem;
     }
 
     dt {
-        font-size: .900rem;
+        border-top: 2px solid $white-smoke;
+        padding-top: .5rem;
     }
 
-    dd {
-        font-size: .800rem;
-    }
 }
-
-
-
-h1.main-title {
-    div.adjust-font {
-        font-size: 1rem;
-        font-weight: bold;
-    }
-}
-
