--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -115,6 +115,12 @@ footer {
     line-height: 1.2;
     margin-bottom: 2rem;
     max-width: 30ex;
+
+    .small {
+        display: block;
+        font-size: 1rem;
+        font-weight: normal;
+    }
 }
 
 /*
