Don't allow access to survey for guests if there are submission windows, use correcct submission window when adding submission

--- a/src/onegov/org/theme/styles/org.scss
+++ b/src/onegov/org/theme/styles/org.scss
@@ -2010,6 +2010,12 @@ div#redactor-droparea {
 .main-title {
     margin-bottom: 1rem;
     margin-top: -.5rem;
+
+    .small {
+        display: block;
+        font-size: 1.5rem;
+        font-weight: normal;
+    }
 }
 
 /*
