Hide ogc-login for fsi on productive

--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -947,6 +947,10 @@ ul.recipients {
 }
 
 #page-auth-login {
+    .provider-login p {
+        margin: 0 !important;
+    }
+
     p {
         margin-top: 2rem;
     }
@@ -956,6 +960,10 @@ ul.recipients {
     }
 
     .cancel-link {
+        display: none;
+    }
+
+    .ogc-login {
         display: none;
     }
 }
