--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -114,13 +114,13 @@ footer {
 .main-title {
     line-height: 1.2;
     margin-bottom: 2rem;
-    max-width: 30ex;
 
     .small {
         display: block;
         font-size: 1.5rem;
         font-weight: normal;
     }
+
 }
 
 /*
@@ -1130,5 +1130,24 @@ ul.recipients {
     #formcode-snippet-swiss-vat-number,
     #formcode-snippet-markdown {
         display: none;
+    }
+}
+
+
+.chosen-container-multi {
+    .chosen-choices {
+        background: $white !important;
+        border: {
+            radius: 0 !important;
+        }
+        box-shadow: none !important;
+        padding: ($form-spacing / 3) ($form-spacing / 2) !important;
+
+        li.search-choice {
+            background: none !important;
+            border: 0 !important;
+            box-shadow: none !important;
+            float: none;
+        }
     }
 }
