Make end hour selector as tall as end date input

--- a/src/onegov/town6/theme/styles/publication_signature.scss
+++ b/src/onegov/town6/theme/styles/publication_signature.scss
@@ -67,6 +67,7 @@
 
             > select {
                 flex: 0 0 25%;
+                height: auto; /* keeps select height the same as input */
 
                 margin-left: .5rem;
                 margin-right: .5rem;
