--- a/src/onegov/town6/theme/styles/files.scss
+++ b/src/onegov/town6/theme/styles/files.scss
@@ -160,6 +160,7 @@ section#content .files {
 */
 
 .file-status {
+    margin: 0 0.6rem 0 0.6rem;
     flex-grow: 1;
 
     h3 {
@@ -174,6 +175,7 @@ section#content .files {
 .file-status-tag {
     font-size: .875rem;
     line-height: 1rem;
+    margin: .3rem 1rem .75rem 0;
     text-wrap: nowrap;
 
     .alert-box {
