Adds footer settings for linkedin and tiktok

--- a/src/onegov/town6/theme/styles/footer.scss
+++ b/src/onegov/town6/theme/styles/footer.scss
@@ -30,6 +30,10 @@ $footer-hover-color: $primary-fg-color;
         text-transform: none;
     }
 
+    h5.custom-links {
+        margin-top: .5rem;
+    }
+
     .cell {
 
         @include clean-ul;
