Fix space between slider and content

--- a/src/onegov/town6/theme/styles/widgets.scss
+++ b/src/onegov/town6/theme/styles/widgets.scss
@@ -122,6 +122,7 @@ article.content .side-panel {
     .grid-container.full {
         &:first-of-type {
             padding-top: 0;
+            padding-bottom: 0;
         }
     }
 
