--- a/src/onegov/town6/theme/styles/files.scss
+++ b/src/onegov/town6/theme/styles/files.scss
@@ -146,9 +146,9 @@ section#content .files {
 }
 
 .file-actions {
-
     display: flex;
     flex-direction: column;
+    text-wrap: nowrap;
 
     a {
         margin-bottom: .5rem;
@@ -160,6 +160,7 @@ section#content .files {
 */
 
 .file-status {
+    margin: 0 0.6rem 0 0.6rem;
     flex-grow: 1;
 
     h3 {
@@ -174,7 +175,8 @@ section#content .files {
 .file-status-tag {
     font-size: .875rem;
     line-height: 1rem;
-    margin: .3rem 2rem .75rem 0;
+    margin: .3rem 1rem .75rem 0;
+    text-wrap: nowrap;
 
     .alert-box {
         margin-bottom: .5rem;
