Add pointer for hover

--- a/src/onegov/town6/theme/styles/files.scss
+++ b/src/onegov/town6/theme/styles/files.scss
@@ -118,6 +118,10 @@ section#content .files {
         td:nth-child(5) {
             white-space: nowrap;
         }
+
+        a[id^="button"] {
+            cursor: pointer;
+        }
     }
 
     .file-info + tr {
