--- a/src/onegov/town6/theme/styles/header.scss
+++ b/src/onegov/town6/theme/styles/header.scss
@@ -68,7 +68,7 @@ $pdf-icon: '\f1c1';
 $ticket-files-icon: '\f019';
 $qr-code-icon: '\f029';
 $results-icon: '\f682';
-$undo-icon: '\f0e2';
+$trash-restore-icon: '\f829';
 
 #header {
     background: $smoke;
@@ -565,7 +565,7 @@ $editbar-fg-color-active: $white;
     .cancel::before { @include icon-bold($disabled-icon); }
     .qr-code-link::before { @include icon-bold($qr-code-icon); }
     .results-link::before { @include icon-bold($results-icon); }
-    .undo-link::before { @include icon-bold($undo-icon); }
+    .undo-link::before { @include icon-bold($trash-restore-icon); }
 }
 
 
