Org: Avoids generating a giant list of fields in `PersonLinkExtension`
Instead use a dynamic `FieldList` like with `GeneralFileLinkExtension`

TYPE: Feature
LINK: OGC-1796

--- a/src/onegov/town6/theme/styles/chosen.scss
+++ b/src/onegov/town6/theme/styles/chosen.scss
@@ -1,5 +1,6 @@
 // Todo: Make the chosen select fields look like the others
-.field-type-chosenselectfield .chosen-select {
+.field-type-chosenselectfield .chosen-select,
+.field-type-peoplefield .people-select {
     display: none !important;
 }
 
